--- a/SE_project/home.html
+++ b/SE_project/home.html
@@ -54,57 +54,8 @@
             </div>
         </div>
 
-        <div class="right-section">
-            <div class="div1">
-                <div class="name">Tổng kết ngày</div>
-                <div class="date">21/10/2024</div>
-                <div class="data data-js">
-                </div>
-            </div>
-            <div class="div2">
-                <div class="bxh">
-                    <div class="user-name">Xếp hạng người dùng</div>
-                    <img src="icons/Group 90.svg">
-                </div>
-                <div class="total-cost">
-                    <div class="cost">Doanh thu trong tuần</div>
-                    <img src="icons/BarLineChart.svg">
-                </div>
-            </div>
-            <div class="div3">
-                <div class="pie-chart">
-                    <div>Tổng chi phí</div>
-                    <div class="pie-chart-img">
-                        <img class="pie-img" src="icons/PieLayer.svg">
-                        <img class="pro-img" src="icons/Legends.svg">
-                    </div>
-                </div>
-                <div class="line-chart">
-                    <div>Người dùng truy cập</div>
-                    <img src="icons/BarLineChart-2.svg">
-                </div>
-            </div>
-            <div class="div4">
-                <div class="info">
-                    <h2>Đơn in gần đây</h2>
-                    <a href="#" class="show-more">Show more...</a>
-                </div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Tên</th>
-                            <th>Mail</th>
-                            <th>Ngày</th>
-                            <th>Máy in</th>
-                            <th>Trạng thái</th>
-                        </tr>
-                    </thead>
-                    <tbody id="table-body">
-                    </tbody>
-                </table>
+        <div class="right-section right-section-js">
 
-            </div>
         </div>
 
         <div class="right-footer">
@@ -114,7 +65,7 @@
         </div>
     </div>
 
-    <script src="script.js" type="module" class="left-section-js"></script>
+    <script src="home.js" type="module" class="left-section-js"></script>
 </body>
 
 </html>
